# qt-desktop-window

./: CMakeLists.txt  README.md  desktopwindow.cpp  desktopwindow.h  main.cpp  samplewindow.cpp
